TC-1902: license information JSON management
